syntax = "proto3";

//package scheduler.actions; Using sub-packages will be a better/cleaner idea
package actions;

enum RunnerType {
    RUNNER_TYPE_DOCKER = 0;
}

message ExecutionContext {
    RunnerType type = 1;
    optional string container_image = 2;
}

message ActionRequest {
    uint32 action_id = 1;
    ExecutionContext context = 2;
    repeated string commands = 3;
    string repo_url = 4;
}

enum ActionStatus {
    ACTION_STATUS_TODO = 0;
    ACTION_STATUS_PENDING = 1;
    ACTION_STATUS_RUNNING = 2;
    ACTION_STATUS_COMPLETED = 3;
}

message ActionResult {
    ActionStatus completion = 1;
    optional int32 exit_code = 2;
}

message ActionResponseStream {
    uint32 action_id = 1;
    string log = 2;
    ActionResult result = 3;
}

service ActionService {
    rpc ExecutionAction (ActionRequest) returns (stream ActionResponseStream);
}