syntax = "proto3";

package scheduler.controller;

enum RunnerType {
    RUNNER_TYPE_DOCKER = 0;
}

message ExecutionContext {
    RunnerType type = 1;
    optional string container_image = 2;
}

message ActionRequest {
    uint32 action_id = 1;
    ExecutionContext context = 2;
    repeated string commands = 3;
    string repo_url = 4;
}

enum ActionStatus {
    ACTION_STATUS_PENDING = 0;
    ACTION_STATUS_SCHEDULED = 1;
    ACTION_STATUS_RUNNING = 2;
    ACTION_STATUS_COMPLETED = 3;
    ACTION_STATUS_ERROR = 4;
}

message ActionResult {
    ActionStatus completion = 1;
    optional int32 exit_code = 2;
}

message ActionResponse {
    uint32 action_id = 1;
    string log = 2;
    ActionResult result = 3;
}

service Controller {
    rpc ScheduleAction (ActionRequest) returns (stream ActionResponse);
}
